Fix toolbar icons using SVG not showing.

--- a/assets/scss/components/admin_menu_layout.scss
+++ b/assets/scss/components/admin_menu_layout.scss
@@ -101,16 +101,15 @@
         }
 
         a.menu-top {
-            padding: 0 10px !important;
             border-radius: 3px;
             font-size: 14px !important;
             height: 30px !important;
         }
 
         div.wp-menu-image{
-            width: fit-content !important;
-            margin-right: 14px;
-            position: relative !important;        
+            margin-left: 2px;
+            margin-right: 6px;
+            position: relative!important;        
         }
 
         div.wp-menu-name {
