--- a/assets/scss/components/shadows.scss
+++ b/assets/scss/components/shadows.scss
@@ -1,6 +1,6 @@
 /* Shadows */
 
-$shadow: 0 0 30px rgba(0,0,0,.05);
+$shadow: 0 0 20px rgba(0,0,0,.035);
 
 body.cora-shadows {
 
