--- a/assets/scss/components/toolbar.scss
+++ b/assets/scss/components/toolbar.scss
@@ -77,10 +77,10 @@ html.wp-toolbar {
         #wp-admin-bar-my-account.with-avatar>.ab-empty-item img,
         #wp-admin-bar-my-account.with-avatar>a img {
             width: auto;
-            height: 26px;
+            height: 24px;
             border: none;
-            margin: -4px 0 0 10px;
-            border-radius: 26px;
+            margin: -4px 0 0 12px;
+            border-radius: 24px;
         }
         
     }
